# record-convertor

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  LICENSE  README.rst  architecture.txt  dev_requirements.txt  justfile  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: main.yml
docs/: api.rst  commands.rst  conditions.rst  conf.py  dataclass-processor.rst  date-convertors.rst  field-convertors.rst  index.rst  requirements.txt  usage.rst
src/record_convertor/: __init__.py  cli.py
src/record_convertor/command_processor/: __init__.py
src/record_convertor/command_processor/command_helper/: __init__.py  geo_json.py
src/record_convertor/convertor/conditions/: evaluate.py
src/record_convertor/dataclass_processor/: __init__.py
src/record_convertor/field_convertors/: date_convertor.py
src/record_convertor/field_convertors/base_convertor/: base_convertor.py  data_structure_conversions.py  generic_conversions.py  in_place_basic_conversions.py  key_values.py  o_base_convertor.py
src/record_convertor/field_convertors/base_convertor/base_convertor_helpers/: __init__.py  countries.py  html_parser.py  string_helpers.py
src/record_convertor/field_convertors/base_convertor/base_convertor_helpers/data_files/: country_codes.py
src/record_convertor/package_globals/: __init__.py  protocol.py
src/record_convertor/package_globals/conditions/: evaluate.py
src/record_convertor/package_globals/conditions/local_settings/: __init__.py
src/record_convertor/package_settings/: __init__.py  exceptions.py  package_types.py  protocol.py
src/record_convertor/package_settings/conditions/: evaluate.py
src/record_convertor/package_settings/conditions/condition_settings/: condition_types.py
src/record_convertor/package_settings/helpers/: __init__.py  dict_helper.py  str_helper.py
src/record_convertor/processor/command/: __init__.py  command_processor.py  metric_conversions.py
src/record_convertor/processor/command/command_helper/: __init__.py  geo_json.py
src/record_convertor/processor/field_convertors/: __init__.py  date_convertor.py
src/record_convertor/processor/field_convertors/base_convertor/: __init__.py  base_convertor.py
src/record_convertor/processor/field_convertors/base_convertor/base_convertor_helpers/: countries.py  html_parser.py  string_helpers.py
src/record_convertor/processor/field_convertors/base_convertor/base_convertor_helpers/data_files/: __init__.py  country_codes.py
src/record_convertor/rules_generator/: __init__.py  from_dict.py  from_yaml.py
test/: test_cli.py
tests/integration_test/data/: _test_data.py
tests/test_command_classes/: test_metric_conversions.py
tests/test_command_classes/data/: test_data_metric_conversions.py
tests/test_command_processor/: test_argument_check.py
tests/test_conditions/: test_conditions.py
tests/test_dataclass_processor/: test_dataclass_processor.py  test_pydantic_dataclass.py
tests/test_field_convertors/: test_data_structure_conversions.py  test_date_convertor.py  test_field_converter.py  test_field_convertor.py  test_geo_json.py  test_html_parser.py  test_in_place_basic_conversions.py  test_process_command.py  test_target_field.py
tests/test_field_convertors/data/: test_data_date_convertor.py  test_data_field_convertor.py  test_data_process_command.py
tests/test_package_settings/: test_dict_helper.py  test_exceptions.py
tests/test_record_convertor/: test_record_convertor.py  test_record_convertor_logic.py  test_record_convertor_methods.py
tests/test_rules_generator/: test_from_dict.py  test_from_yaml.py
