[metadata]
name = record-convertor
version = 0.0.1
author = Maarten de Ruyter
author_email = "Maarten de Ruyter" <maarten@geodatagarden.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

description = Converts structure, keys and fields from a record according to predefined rules
long_description = file: README.rst, CHANGELOG.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests*


######################
# Tool configuration #
######################

[mypy]
python_version = 3.12
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = record_convertor
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/record_convertor
    */site-packages/record_convertor

[tox:tox]
envlist = py310, py311, py312
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
    pytest-mock
    jmespath
    phonenumbers
    unidecode
    pyyaml

commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
commands =
    mypy --ignore-missing-imports {posargs:src tests}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}